--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,2 @@
 language: java
-script: ant -buildfile ./client-libraries/java/rest-client/build.xml test
+script: ant -buildfile ./client-libraries/java/rest-client/build.xml src-jar
