add settings in build file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
-script: "ant -f ./client-libraries/java/rest-client/build.xml --settings settings.xml"
+script: "ant -f ./client-libraries/java/rest-client/build.xml"
 
 env:
   global:
