--- a/client-libraries/java/rest-client/build.xml
+++ b/client-libraries/java/rest-client/build.xml
@@ -139,6 +139,7 @@
       <arg value="-DrepositoryId=${ossrh-server-id}" />
       <arg value="-DpomFile=pom.xml" />
       <arg value="-Dfile=${jar}" />
+      <arg value="-Dsettings=settings.xml" />
       <arg value="-e" />
     </artifact:mvn>
   </target>
