--- a/client-libraries/java/rest-client/build.xml
+++ b/client-libraries/java/rest-client/build.xml
@@ -42,7 +42,7 @@
     <path refid="compile.test.classpath"/>
     <pathelement location="${test-classes}"/>
   </path>
-  <path id="maven-ant-task.classpath" path="${lib}/maven-ant-tasks-2.1.3.jar" />
+  <path id="maven-ant-tasks.classpath" path="${lib}/maven-ant-tasks-2.1.3.jar" />
   <typedef resource="org/apache/maven/artifact/ant/antlib.xml"
            uri="antlib:org.apache.maven.artifact.ant"
            classpathref="maven-ant-tasks.classpath" />
