--- a/client-libraries/java/rest-client/build.xml
+++ b/client-libraries/java/rest-client/build.xml
@@ -142,6 +142,7 @@
       <arg value="-Durl=${ossrh-snapshots-repository-url}" />
       <arg value="-DrepositoryId=${ossrh-server-id}" />
       <arg value="-DpomFile=pom.xml" />
+      <arg value="-DsettingsFile=settings.xml" />
       <arg value="-Dfile=${jar}" />
       <arg value="-e" />
     </artifact:mvn>
