--- a/client-libraries/java/rest-client/build.xml
+++ b/client-libraries/java/rest-client/build.xml
@@ -141,7 +141,7 @@
       <arg value="org.apache.maven.plugins:maven-deploy-plugin:2.6:deploy-file" />
       <arg value="-Durl=${ossrh-snapshots-repository-url}" />
       <arg value="-DrepositoryId=${ossrh-server-id}" />
-      <arg value="-DpomFile=poms.xml" />
+      <arg value="-DpomFile=pom.xml" />
       <arg value="-DsettingsFile=settings.xml" />
       <arg value="-Dfile=${jar}" />
       <arg value="-e" />
