--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
     </licenses>
     <developers>
         <developer>
-            <name>Arthur Thompson</name>
-            <email>arthurthompson@google.com</email>
+            <name>Java GCM</name>
+            <email>java-gcm@google.com</email>
             <organization>Google</organization>
             <organizationUrl>https://google.com</organizationUrl>
         </developer>
