--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: java
-script: "ant -f ./client-libraries/java/rest-client/build.xml deploy"
+script:
+  - "ant -f ./client-libraries/java/rest-client/build.xml deploy"
+  - "gpg --help"
 
 env:
   global:
@@ -8,7 +10,6 @@ env:
 
 before_install:
   - cp settings.xml ${HOME}/.m2/settings.xml
-  - gpg --help
 
 after_success:
   - cat settings.xml
