--- a/client-libraries/java/rest-client/build.xml
+++ b/client-libraries/java/rest-client/build.xml
@@ -124,7 +124,7 @@
   <!-- define Maven coordinates -->
   <property name="groupId" value="com.google.gcm" />
   <property name="artifactId" value="gcm-server" />
-  <property name="version" value="1.0-SNAPSHOT" />
+  <property name="version" value="1.0.0" />
   <!-- define artifacts' name, which follows the convention of Maven -->
   <property name="jar" value="${dist}/${artifactId}-${version}.jar" />
   <property name="javadoc-jar" value="${dist}/${artifactId}-${version}-javadoc.jar" />
