--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - cp settings.xml ${HOME}/.m2/settings.xml
 
 after_success:
-  - echo "deploy complete."
+  - echo "deploy complete"
 
 branches:
   only:
