--- a/client-libraries/java/rest-client/build.xml
+++ b/client-libraries/java/rest-client/build.xml
@@ -30,12 +30,14 @@
   <!-- define Maven coordinates -->
   <property name="groupId" value="com.google.gcm" />
   <property name="artifactId" value="gcm-server" />
-  <property name="version" value="1.0-SNAPSHOT" />
+  <property name="version" value="1.0.0" />
   <!-- define artifacts' name, which follows the convention of Maven -->
   <property name="jar" value="${dist}/${artifactId}-${version}.jar" />
   <!-- defined maven snapshots and staging repository id and url -->
   <property name="ossrh-snapshots-repository-url"
             value="https://oss.sonatype.org/content/repositories/snapshots" />
+  <property name="ossrh-staging-repository-url"
+            value="https://oss.sonatype.org/service/local/staging/deploy/maven2/" />
   <!-- there server id in the Maven settings.xml -->
   <property name="ossrh-server-id" value="ossrh" />
 
@@ -138,6 +140,39 @@
       <arg value="-DpomFile=client-libraries/java/rest-client/pom.xml" />
       <arg value="-Dfile=${jar}" />
       <arg value="-e" />
+    </artifact:mvn>
+  </target>
+
+  <!-- before this, update project version (both build.xml and pom.xml) from SNAPSHOT to RELEASE -->
+  <target name="stage" depends="dist" description="deploy release version to Maven staging repository">
+    <!-- sign and deploy the main artifact -->
+    <artifact:mvn>
+      <arg value="org.apache.maven.plugins:maven-gpg-plugin:1.3:sign-and-deploy-file" />
+      <arg value="-Durl=${ossrh-staging-repository-url}" />
+      <arg value="-DrepositoryId=${ossrh-server-id}" />
+      <arg value="-DpomFile=client-libraries/java/rest-client/pom.xml" />
+      <arg value="-Dfile=${jar}" />
+      <arg value="-Pgpg" />
+    </artifact:mvn>
+    <!-- sign and deploy the sources artifact -->
+    <artifact:mvn>
+      <arg value="org.apache.maven.plugins:maven-gpg-plugin:1.3:sign-and-deploy-file" />
+      <arg value="-Durl=${ossrh-staging-repository-url}" />
+      <arg value="-DrepositoryId=${ossrh-server-id}" />
+      <arg value="-DpomFile=client-libraries/java/rest-client/pom.xml" />
+      <arg value="-Dfile=${sources-jar}" />
+      <arg value="-Dclassifier=sources" />
+      <arg value="-Pgpg" />
+    </artifact:mvn>
+    <!-- sign and deploy the javadoc artifact -->
+    <artifact:mvn>
+      <arg value="org.apache.maven.plugins:maven-gpg-plugin:1.3:sign-and-deploy-file" />
+      <arg value="-Durl=${ossrh-staging-repository-url}" />
+      <arg value="-DrepositoryId=${ossrh-server-id}" />
+      <arg value="-DpomFile=client-libraries/java/rest-client/pom.xml" />
+      <arg value="-Dfile=${javadoc-jar}" />
+      <arg value="-Dclassifier=javadoc" />
+      <arg value="-Pgpg" />
     </artifact:mvn>
   </target>
 </project>
