--- a/client-libraries/java/rest-client/build.xml
+++ b/client-libraries/java/rest-client/build.xml
@@ -115,6 +115,20 @@
     </antcall>
   </target>
 
+  <target name="doc" depends="compile, tests" description="generate documentation">
+    <javadoc sourcepath="${src}" destdir="${javadoc-jar}">
+      <classpath>
+        <fileset dir="${lib}">
+          <include name="json_simple-1.1.jar"/>
+        </fileset>
+      </classpath>
+    </javadoc>
+  </target>
+
+  <target name="javadoc-jar" depends="doc" description="generate doc jar">
+    <jar destfile="${javadoc-jar}" basedir="${dist}/javadoc"/>
+  </target>
+
   <target name="_jar">
     <jar destfile="${_destfile}" basedir="${_basedir}">
       <manifest>
@@ -126,7 +140,7 @@
     </jar>
   </target>
 
-  <target name="dist" depends="jar, src-jar" description="Generate all artifacts."/>
+  <target name="dist" depends="jar, src-jar, javadoc-jar" description="Generate all artifacts."/>
 
   <target name="update-demo" depends="jar" description="Generates a new GCM server library JAR and copy it to the demo project.">
     <copy file="${jar}" todir="${demo-dir}/WebContent/WEB-INF/lib"/>
